# ModelingCopilot

./: .gitignore  README.md  app.py  config.yaml  pyproject.toml  requirements.txt  web_app.py
agents/: algorithm_agent.py  analysis_agent.py  paper_agent.py  tool_agent.py
chroma_db/: chroma.sqlite3
rag/embedding/: embedding_model.py
rag/parser/: mineru_parser.py
rag/pipeline/: ingest_pipeline.py
rag/retriever/: retriever.py
rag/vector_store/: chroma_store.py
tools/: model_tools.py
utils/: llm.py
workflow/: graph.py
